tools/playbooks/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
spec:
  ingressClassName: nginx-internal
  rules:
  - host: grafana-aks.appsec-yggdrasil.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80 
        path: /
        pathType: Prefix
