tools/playbooks/grafana/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  gateways:
  - istio-system/https-gateway
  hosts:
  - grafana.code-triarii.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana
        port:
          number: 80
